# profit_tracker

./: Cargo.toml  README.md  example_etrade.csv
.github/workflows/: ci.yml
src/: app.rs  csv_processor.rs  db.rs  logic.rs  main.rs  models.rs
src/ui/: add_trade.rs  campaign_dashboard.rs  campaign_select.rs  edit_trade.rs  mod.rs  new_campaign.rs  summary.rs  view_trades.rs
tests/: etrade.csv
