[package]
name = "profit_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = "0.37"
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
serde = { version = "1.0", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.29"
clap = { version = "4.0", features = ["derive"] }
csv = "1.3"
regex = "1.10"
